--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <style>
+
+        * {
+            overflow-x: hidden;
+        }
+
         body {
             background: linear-gradient(45deg, rgba(255, 0, 0, 0.500), rgba(0, 0, 255, 0.500));
             min-height: 100vh;
@@ -17,6 +22,12 @@
 
         .box-table {
             background-color: rgba(0, 0, 0, 0.183);
+        }
+
+        @media (max-width: 768px) {
+            body {
+                font-size: xx-small;
+            }
         }
     </style>
 
