--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <th scope="col">Genero</th>
                     <th scope="col">Genero</th>
                     <th scope="col">Genero</th>
-                    <th scope="col">Genero</th>
+                    <th scope="col">Saraza</th>
 
 
                 </tr>
