--- a/card-book.html
+++ b/card-book.html
@@ -46,7 +46,7 @@
 
         @media (max-width: 768px) {
             .box-info {
-                font-size: x-small;
+                font-size: small;
             }
 
             .box-img {
